[gd_scene load_steps=3 format=3 uid="uid://c08mnht0n1op5"]

[ext_resource type="Script" uid="uid://caq1ckmgrqduc" path="res://Calculators/Density/density.gd" id="1_6ayb6"]
[ext_resource type="Texture2D" uid="uid://dnswhwlkqm24a" path="res://Calculators/CalculatorBackground.png" id="1_slhui"]

[node name="Density" type="Node2D"]
script = ExtResource("1_6ayb6")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_right = 384.0
offset_bottom = 344.0
texture = ExtResource("1_slhui")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Constants" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Constants"]
offset_left = 64.0
offset_top = 16.0
offset_right = 192.0
offset_bottom = 39.0
text = "Density"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Constants"]
offset_left = 16.0
offset_top = 48.0
offset_right = 64.0
offset_bottom = 88.0
text = "P"
vertical_alignment = 1

[node name="Label3" type="Label" parent="Constants"]
offset_left = 16.0
offset_top = 104.0
offset_right = 64.0
offset_bottom = 144.0
text = "m"
vertical_alignment = 1

[node name="Label4" type="Label" parent="Constants"]
offset_left = 16.0
offset_top = 160.0
offset_right = 64.0
offset_bottom = 200.0
text = "V"
vertical_alignment = 1

[node name="DisplayText" type="RichTextLabel" parent="."]
offset_left = 216.0
offset_top = 16.0
offset_right = 368.0
offset_bottom = 328.0
focus_mode = 2
text = "P is density, units in m/V

m is Mass

V is Volume"
vertical_alignment = 1
selection_enabled = true

[node name="Density" type="TextEdit" parent="."]
offset_left = 64.0
offset_top = 48.0
offset_right = 192.0
offset_bottom = 88.0
placeholder_text = "Density"

[node name="Mass" type="TextEdit" parent="."]
offset_left = 64.0
offset_top = 104.0
offset_right = 192.0
offset_bottom = 144.0
placeholder_text = "Mass (kg)"

[node name="Volume" type="TextEdit" parent="."]
offset_left = 64.0
offset_top = 160.0
offset_right = 192.0
offset_bottom = 200.0
placeholder_text = "Volume (m^3)"

[node name="Calculate" type="Button" parent="."]
offset_left = 64.0
offset_top = 216.0
offset_right = 192.0
offset_bottom = 280.0
text = "Calculate"

[node name="Clear" type="Button" parent="."]
offset_left = 64.0
offset_top = 288.0
offset_right = 192.0
offset_bottom = 328.0
text = "Clear"

[connection signal="text_changed" from="Density" to="." method="_on_density_text_changed"]
[connection signal="text_changed" from="Mass" to="." method="_on_mass_text_changed"]
[connection signal="text_changed" from="Volume" to="." method="_on_volume_text_changed"]
[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
